Displaying all graphs

--- a/datasetHandler.ipynb
+++ b/datasetHandler.ipynb
@@ -23,8 +23,11 @@
    "source": [
     "class Dataset():\n",
     "    def __init__(self, path):\n",
-    "        self.data = pd.read_csv(path, index_col=2)\n",
-    "        self.data = self.data.drop(['Country', 'Region'], axis=1)"
+    "        self.data = pd.read_csv(path)\n",
+    "        stringColumns = ['Country', 'Region', 'Country or region']\n",
+    "        for column in stringColumns:\n",
+    "            if column in self.data.columns:\n",
+    "                self.data = self.data.drop(columns=column, axis=1)"
    ]
   },
   {
@@ -91,13 +94,6 @@
     "        plt.plot(xl, yl, 'r--')\n",
     "        plt.show(True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
