Happiness rank droped

--- a/datasetHandler.ipynb
+++ b/datasetHandler.ipynb
@@ -24,7 +24,7 @@
     "class Dataset():\n",
     "    def __init__(self, path):\n",
     "        self.data = pd.read_csv(path)\n",
-    "        stringColumns = ['Country', 'Region', 'Country or region']\n",
+    "        stringColumns = ['Country', 'Region', 'Country or region', 'Happiness Rank', 'Overall rank', 'Happiness.Rank']\n",
     "        for column in stringColumns:\n",
     "            if column in self.data.columns:\n",
     "                self.data = self.data.drop(columns=column, axis=1)"
