--- a/datasetHandler.ipynb
+++ b/datasetHandler.ipynb
@@ -12,7 +12,8 @@
     "import numpy as np\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score"
    ]
   },
   {
@@ -24,7 +25,11 @@
     "class Dataset():\n",
     "    def __init__(self, path):\n",
     "        self.data = pd.read_csv(path)\n",
-    "        stringColumns = ['Country', 'Region', 'Country or region', 'Happiness Rank', 'Overall rank', 'Happiness.Rank']\n",
+    "        self.data = self.data.fillna(0)\n",
+    "        stringColumns = ['Country', 'Region', 'Country or region', 'Happiness Rank', \n",
+    "                         'Overall rank', 'Happiness.Rank', 'Standard Error','Dystopia Residual', \n",
+    "                         'Lower Confidence Interval', 'Upper Confidence Interval', 'Whisker.high', \n",
+    "                         'Whisker.low', 'Dystopia.Residual']\n",
     "        for column in stringColumns:\n",
     "            if column in self.data.columns:\n",
     "                self.data = self.data.drop(columns=column, axis=1)"
@@ -59,9 +64,9 @@
     "    def linearRegression(self):\n",
     "        self.data = self.data.to_numpy()\n",
     "        nrow,ncol = self.data.shape\n",
-    "        y = self.data[:,-1]\n",
-    "        X = self.data[:,0:ncol-1]\n",
-    "\n",
+    "        y = self.data[:,0]\n",
+    "        X = self.data[:,1:ncol]\n",
+    "        \n",
     "        # divide o conjunto em treinamento e teste\n",
     "        p = 0.3 # fracao e elementos no conjnto de teste (30%)\n",
     "        self.x_train, self.x_test, self.y_train, self.y_test = train_test_split(X, y, test_size = p, random_state = 42)\n",
@@ -93,6 +98,18 @@
     "        yl = xl\n",
     "        plt.plot(xl, yl, 'r--')\n",
     "        plt.show(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dataset(Dataset):\n",
+    "    def R2coefficient(self):\n",
+    "        R2 = r2_score(self.y_test , self.y_pred)\n",
+    "        print('Coeficiente de determinação R2:', R2)"
    ]
   }
  ],
