Variables correlation added

--- a/datasetHandler.ipynb
+++ b/datasetHandler.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import r2_score"
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -25,7 +27,6 @@
     "class Dataset():\n",
     "    def __init__(self, path):\n",
     "        self.data = pd.read_csv(path)\n",
-    "        self.data = self.data.fillna(0)\n",
     "        stringColumns = ['Country', 'Region', 'Country or region', 'Happiness Rank', \n",
     "                         'Overall rank', 'Happiness.Rank', 'Standard Error','Dystopia Residual', \n",
     "                         'Lower Confidence Interval', 'Upper Confidence Interval', 'Whisker.high', \n",
@@ -43,7 +44,14 @@
    "source": [
     "class Dataset(Dataset):\n",
     "    def printSample(self):\n",
-    "        print(\"Número de linhas e colunas:\", self.data.shape)\n",
+    "        print('\\x1b[1;1m'+'Quantidade de valores faltantes no dataset: '+'\\x1b[0m')\n",
+    "        display(self.data.isna().sum())\n",
+    "        \n",
+    "        if self.data.isna().sum().sum() != 0:\n",
+    "            self.data = self.data.fillna(0)\n",
+    "        \n",
+    "        print('\\x1b[1;1m'+'Linhas duplicadas: '+'\\x1b[0m', self.data.duplicated().sum())\n",
+    "        print('\\x1b[1;1m'+'Número de linhas e colunas: '+'\\x1b[0m', self.data.shape)\n",
     "        display(self.data.head(10))"
    ]
   },
@@ -62,10 +70,10 @@
    "source": [
     "class Dataset(Dataset):\n",
     "    def linearRegression(self):\n",
-    "        self.data = self.data.to_numpy()\n",
-    "        nrow,ncol = self.data.shape\n",
-    "        y = self.data[:,0]\n",
-    "        X = self.data[:,1:ncol]\n",
+    "        self.dataArr = self.data.to_numpy()\n",
+    "        nrow,ncol = self.dataArr.shape\n",
+    "        y = self.dataArr[:,0]\n",
+    "        X = self.dataArr[:,1:ncol]\n",
     "        \n",
     "        # divide o conjunto em treinamento e teste\n",
     "        p = 0.3 # fracao e elementos no conjnto de teste (30%)\n",
@@ -109,7 +117,21 @@
     "class Dataset(Dataset):\n",
     "    def R2coefficient(self):\n",
     "        R2 = r2_score(self.y_test , self.y_pred)\n",
-    "        print('Coeficiente de determinação R2:', R2)"
+    "        print('\\x1b[1;1m'+'Coeficiente de determinação R2:'+'\\x1b[0m', R2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dataset(Dataset):\n",
+    "    def VariableCorrelations(self):\n",
+    "        corr = self.data.corr()\n",
+    "        #Plot Correlation Matrix using Matplotlib\n",
+    "        plt.figure(figsize=(10, 8))\n",
+    "        sns.heatmap(corr, annot=True, fmt='.2f', cmap='Purples')"
    ]
   }
  ],
