Correlation coeficients added

--- a/datasetHandler.ipynb
+++ b/datasetHandler.ipynb
@@ -133,6 +133,28 @@
     "        plt.figure(figsize=(10, 8))\n",
     "        sns.heatmap(corr, annot=True, fmt='.2f', cmap='Purples')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dataset(Dataset):\n",
+    "    def spearmanCorrelation(self):\n",
+    "        display(self.data.corr(method='spearman'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dataset(Dataset):\n",
+    "    def pearsonCorrelation(self):\n",
+    "        display(self.data.corr(method='pearson'))"
+   ]
   }
  ],
  "metadata": {
