LM equation added

--- a/datasetHandler.ipynb
+++ b/datasetHandler.ipynb
@@ -15,6 +15,8 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
+    "from IPython.display import Math\n",
+    "\n",
     "import seaborn as sns"
    ]
   },
@@ -80,11 +82,10 @@
     "        self.x_train, self.x_test, self.y_train, self.y_test = train_test_split(X, y, test_size = p, random_state = 42)\n",
     "        \n",
     "        # modelo de regressão linear múltipla\n",
-    "        lm = LinearRegression()\n",
-    "        lm.fit(self.x_train, self.y_train)\n",
-    "\n",
-    "        self.y_pred = lm.predict(self.x_test)\n",
-    "            \n"
+    "        self.lm = LinearRegression()\n",
+    "        self.lm.fit(self.x_train, self.y_train)\n",
+    "        \n",
+    "        self.y_pred = self.lm.predict(self.x_test)"
    ]
   },
   {
@@ -115,6 +116,22 @@
    "outputs": [],
    "source": [
     "class Dataset(Dataset):\n",
+    "    def linearRegressionEquation(self, x1,x2,x3,x4,x5,x6):\n",
+    "        intercept = self.lm.intercept_\n",
+    "        coefs = self.lm.coef_\n",
+    "        \n",
+    "        display(Math(rf'\\text{{Happiness Score}} = {intercept: .3f} + {coefs[0]: .3f}X_1 + {coefs[1]: .3f}X_2 + {coefs[2]: .3f}X_3 + {coefs[3]: .3f}X_4 + {coefs[4]: .3f}X_5 + {coefs[5]: .3f}X_6'))\n",
+    "        \n",
+    "        print(\"Happines Score predito:\", self.lm.predict([[x1,x2,x3,x4,x5,x6]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dataset(Dataset):\n",
     "    def R2coefficient(self):\n",
     "        R2 = r2_score(self.y_test , self.y_pred)\n",
     "        print('\\x1b[1;1m'+'Coeficiente de determinação R2:'+'\\x1b[0m', R2)"
@@ -122,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
