--- a/main.ipynb
+++ b/main.ipynb
@@ -27,8 +27,209 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from datasetHandler.ipynb\n"
+      "importing Jupyter notebook from datasetHandler.ipynb\n",
+      "\u001b[1;1mQuantidade de valores faltantes no dataset: \u001b[0m\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Happiness Score                  0\n",
+       "Economy (GDP per Capita)         0\n",
+       "Family                           0\n",
+       "Health (Life Expectancy)         0\n",
+       "Freedom                          0\n",
+       "Trust (Government Corruption)    0\n",
+       "Generosity                       0\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;1mLinhas duplicadas: \u001b[0m 0\n",
+      "\u001b[1;1mNúmero de linhas e colunas: \u001b[0m (158, 7)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Happiness Score</th>\n",
+       "      <th>Economy (GDP per Capita)</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Health (Life Expectancy)</th>\n",
+       "      <th>Freedom</th>\n",
+       "      <th>Trust (Government Corruption)</th>\n",
+       "      <th>Generosity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.587</td>\n",
+       "      <td>1.39651</td>\n",
+       "      <td>1.34951</td>\n",
+       "      <td>0.94143</td>\n",
+       "      <td>0.66557</td>\n",
+       "      <td>0.41978</td>\n",
+       "      <td>0.29678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>7.561</td>\n",
+       "      <td>1.30232</td>\n",
+       "      <td>1.40223</td>\n",
+       "      <td>0.94784</td>\n",
+       "      <td>0.62877</td>\n",
+       "      <td>0.14145</td>\n",
+       "      <td>0.43630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.527</td>\n",
+       "      <td>1.32548</td>\n",
+       "      <td>1.36058</td>\n",
+       "      <td>0.87464</td>\n",
+       "      <td>0.64938</td>\n",
+       "      <td>0.48357</td>\n",
+       "      <td>0.34139</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>7.522</td>\n",
+       "      <td>1.45900</td>\n",
+       "      <td>1.33095</td>\n",
+       "      <td>0.88521</td>\n",
+       "      <td>0.66973</td>\n",
+       "      <td>0.36503</td>\n",
+       "      <td>0.34699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.427</td>\n",
+       "      <td>1.32629</td>\n",
+       "      <td>1.32261</td>\n",
+       "      <td>0.90563</td>\n",
+       "      <td>0.63297</td>\n",
+       "      <td>0.32957</td>\n",
+       "      <td>0.45811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>7.406</td>\n",
+       "      <td>1.29025</td>\n",
+       "      <td>1.31826</td>\n",
+       "      <td>0.88911</td>\n",
+       "      <td>0.64169</td>\n",
+       "      <td>0.41372</td>\n",
+       "      <td>0.23351</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7.378</td>\n",
+       "      <td>1.32944</td>\n",
+       "      <td>1.28017</td>\n",
+       "      <td>0.89284</td>\n",
+       "      <td>0.61576</td>\n",
+       "      <td>0.31814</td>\n",
+       "      <td>0.47610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7.364</td>\n",
+       "      <td>1.33171</td>\n",
+       "      <td>1.28907</td>\n",
+       "      <td>0.91087</td>\n",
+       "      <td>0.65980</td>\n",
+       "      <td>0.43844</td>\n",
+       "      <td>0.36262</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>7.286</td>\n",
+       "      <td>1.25018</td>\n",
+       "      <td>1.31967</td>\n",
+       "      <td>0.90837</td>\n",
+       "      <td>0.63938</td>\n",
+       "      <td>0.42922</td>\n",
+       "      <td>0.47501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>7.284</td>\n",
+       "      <td>1.33358</td>\n",
+       "      <td>1.30923</td>\n",
+       "      <td>0.93156</td>\n",
+       "      <td>0.65124</td>\n",
+       "      <td>0.35637</td>\n",
+       "      <td>0.43562</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Happiness Score  Economy (GDP per Capita)   Family  \\\n",
+       "0            7.587                   1.39651  1.34951   \n",
+       "1            7.561                   1.30232  1.40223   \n",
+       "2            7.527                   1.32548  1.36058   \n",
+       "3            7.522                   1.45900  1.33095   \n",
+       "4            7.427                   1.32629  1.32261   \n",
+       "5            7.406                   1.29025  1.31826   \n",
+       "6            7.378                   1.32944  1.28017   \n",
+       "7            7.364                   1.33171  1.28907   \n",
+       "8            7.286                   1.25018  1.31967   \n",
+       "9            7.284                   1.33358  1.30923   \n",
+       "\n",
+       "   Health (Life Expectancy)  Freedom  Trust (Government Corruption)  \\\n",
+       "0                   0.94143  0.66557                        0.41978   \n",
+       "1                   0.94784  0.62877                        0.14145   \n",
+       "2                   0.87464  0.64938                        0.48357   \n",
+       "3                   0.88521  0.66973                        0.36503   \n",
+       "4                   0.90563  0.63297                        0.32957   \n",
+       "5                   0.88911  0.64169                        0.41372   \n",
+       "6                   0.89284  0.61576                        0.31814   \n",
+       "7                   0.91087  0.65980                        0.43844   \n",
+       "8                   0.90837  0.63938                        0.42922   \n",
+       "9                   0.93156  0.65124                        0.35637   \n",
+       "\n",
+       "   Generosity  \n",
+       "0     0.29678  \n",
+       "1     0.43630  \n",
+       "2     0.34139  \n",
+       "3     0.34699  \n",
+       "4     0.45811  \n",
+       "5     0.23351  \n",
+       "6     0.47610  \n",
+       "7     0.36262  \n",
+       "8     0.47501  \n",
+       "9     0.43562  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -38,7 +239,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## World Happiness Report from 2015"
    ]
@@ -47,6 +250,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -266,7 +470,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Relação das variáveis"
@@ -300,7 +505,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Regressão linear"
@@ -341,15 +547,77 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
-    "### Coeficiente de Spearman"
+    "### Equação da Regressão linear múltipla"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "| Label | Value |\n",
+    "| :- | :-: |\n",
+    "| Economy (GDP per Capita) | 1.39651 |\n",
+    "| Family | 1.34951 |\n",
+    "| Health (Life Expectancy)\t | 0.94143 |\n",
+    "| Freedom | 0.66557 |\n",
+    "| Trust (Government Corruption) | 0.41978 |\n",
+    "| Generosity | 0.29678 |"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "hidden": true,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\text{Happiness Score} =  1.959 +  0.908X_1 +  1.183X_2 +  1.018X_3 +  1.214X_4 +  0.712X_5 +  0.824X_6$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Happines Score predito: [7.13359631]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data2015.linearRegressionEquation(1.39651,1.34951,0.94143,0.66557,0.41978,0.29678)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
+   "source": [
+    "### Coeficiente de Spearman"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -497,15 +765,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Coeficiente de Pearson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -662,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -893,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -919,6 +1191,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -927,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -971,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1131,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1281,15 +1554,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## World Happiness Report from 2017"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -1509,7 +1785,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Relação das variáveis"
@@ -1517,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -1543,7 +1820,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Regressão linear"
@@ -1551,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1595,7 +1873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1755,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1905,15 +2183,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## World Happiness Report from 2018"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -2121,7 +2402,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Relação das variáveis"
@@ -2129,7 +2411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -2154,15 +2436,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Regressão linear"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -2204,7 +2490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2373,7 +2659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2532,15 +2818,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## World Happiness Report from 2019"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -2747,15 +3036,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Relação das variáveis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -2778,15 +3071,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true,
+    "hidden": true
+   },
    "source": [
     "### Regressão linear"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -2828,7 +3125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2988,7 +3285,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
@@ -2997,7 +3293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {
     "hidden": true,
     "scrolled": true
