--- a/main.ipynb
+++ b/main.ipynb
@@ -9,9 +9,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Modules and Packages"
    ]
@@ -19,217 +17,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing Jupyter notebook from datasetHandler.ipynb\n",
-      "\u001b[1;1mQuantidade de valores faltantes no dataset: \u001b[0m\n"
+      "importing Jupyter notebook from datasetHandler.ipynb\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Happiness Score                  0\n",
-       "Economy (GDP per Capita)         0\n",
-       "Family                           0\n",
-       "Health (Life Expectancy)         0\n",
-       "Freedom                          0\n",
-       "Trust (Government Corruption)    0\n",
-       "Generosity                       0\n",
-       "dtype: int64"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;1mLinhas duplicadas: \u001b[0m 0\n",
-      "\u001b[1;1mNúmero de linhas e colunas: \u001b[0m (158, 7)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Happiness Score</th>\n",
-       "      <th>Economy (GDP per Capita)</th>\n",
-       "      <th>Family</th>\n",
-       "      <th>Health (Life Expectancy)</th>\n",
-       "      <th>Freedom</th>\n",
-       "      <th>Trust (Government Corruption)</th>\n",
-       "      <th>Generosity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>7.587</td>\n",
-       "      <td>1.39651</td>\n",
-       "      <td>1.34951</td>\n",
-       "      <td>0.94143</td>\n",
-       "      <td>0.66557</td>\n",
-       "      <td>0.41978</td>\n",
-       "      <td>0.29678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7.561</td>\n",
-       "      <td>1.30232</td>\n",
-       "      <td>1.40223</td>\n",
-       "      <td>0.94784</td>\n",
-       "      <td>0.62877</td>\n",
-       "      <td>0.14145</td>\n",
-       "      <td>0.43630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>7.527</td>\n",
-       "      <td>1.32548</td>\n",
-       "      <td>1.36058</td>\n",
-       "      <td>0.87464</td>\n",
-       "      <td>0.64938</td>\n",
-       "      <td>0.48357</td>\n",
-       "      <td>0.34139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>7.522</td>\n",
-       "      <td>1.45900</td>\n",
-       "      <td>1.33095</td>\n",
-       "      <td>0.88521</td>\n",
-       "      <td>0.66973</td>\n",
-       "      <td>0.36503</td>\n",
-       "      <td>0.34699</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7.427</td>\n",
-       "      <td>1.32629</td>\n",
-       "      <td>1.32261</td>\n",
-       "      <td>0.90563</td>\n",
-       "      <td>0.63297</td>\n",
-       "      <td>0.32957</td>\n",
-       "      <td>0.45811</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>7.406</td>\n",
-       "      <td>1.29025</td>\n",
-       "      <td>1.31826</td>\n",
-       "      <td>0.88911</td>\n",
-       "      <td>0.64169</td>\n",
-       "      <td>0.41372</td>\n",
-       "      <td>0.23351</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7.378</td>\n",
-       "      <td>1.32944</td>\n",
-       "      <td>1.28017</td>\n",
-       "      <td>0.89284</td>\n",
-       "      <td>0.61576</td>\n",
-       "      <td>0.31814</td>\n",
-       "      <td>0.47610</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>7.364</td>\n",
-       "      <td>1.33171</td>\n",
-       "      <td>1.28907</td>\n",
-       "      <td>0.91087</td>\n",
-       "      <td>0.65980</td>\n",
-       "      <td>0.43844</td>\n",
-       "      <td>0.36262</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>7.286</td>\n",
-       "      <td>1.25018</td>\n",
-       "      <td>1.31967</td>\n",
-       "      <td>0.90837</td>\n",
-       "      <td>0.63938</td>\n",
-       "      <td>0.42922</td>\n",
-       "      <td>0.47501</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>7.284</td>\n",
-       "      <td>1.33358</td>\n",
-       "      <td>1.30923</td>\n",
-       "      <td>0.93156</td>\n",
-       "      <td>0.65124</td>\n",
-       "      <td>0.35637</td>\n",
-       "      <td>0.43562</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Happiness Score  Economy (GDP per Capita)   Family  \\\n",
-       "0            7.587                   1.39651  1.34951   \n",
-       "1            7.561                   1.30232  1.40223   \n",
-       "2            7.527                   1.32548  1.36058   \n",
-       "3            7.522                   1.45900  1.33095   \n",
-       "4            7.427                   1.32629  1.32261   \n",
-       "5            7.406                   1.29025  1.31826   \n",
-       "6            7.378                   1.32944  1.28017   \n",
-       "7            7.364                   1.33171  1.28907   \n",
-       "8            7.286                   1.25018  1.31967   \n",
-       "9            7.284                   1.33358  1.30923   \n",
-       "\n",
-       "   Health (Life Expectancy)  Freedom  Trust (Government Corruption)  \\\n",
-       "0                   0.94143  0.66557                        0.41978   \n",
-       "1                   0.94784  0.62877                        0.14145   \n",
-       "2                   0.87464  0.64938                        0.48357   \n",
-       "3                   0.88521  0.66973                        0.36503   \n",
-       "4                   0.90563  0.63297                        0.32957   \n",
-       "5                   0.88911  0.64169                        0.41372   \n",
-       "6                   0.89284  0.61576                        0.31814   \n",
-       "7                   0.91087  0.65980                        0.43844   \n",
-       "8                   0.90837  0.63938                        0.42922   \n",
-       "9                   0.93156  0.65124                        0.35637   \n",
-       "\n",
-       "   Generosity  \n",
-       "0     0.29678  \n",
-       "1     0.43630  \n",
-       "2     0.34139  \n",
-       "3     0.34699  \n",
-       "4     0.45811  \n",
-       "5     0.23351  \n",
-       "6     0.47610  \n",
-       "7     0.36262  \n",
-       "8     0.47501  \n",
-       "9     0.43562  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -615,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -775,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -934,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -1165,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -1200,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1244,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1404,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1563,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -1794,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -1829,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1873,7 +1668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2033,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2192,7 +1987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -2411,7 +2206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -2446,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -2490,7 +2285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2659,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2818,18 +2613,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "## World Happiness Report from 2019"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
-    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -3037,8 +2829,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Relação das variáveis"
@@ -3046,7 +2837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -3072,8 +2863,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Regressão linear"
@@ -3081,7 +2871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -3116,8 +2906,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true,
-    "hidden": true
+    "heading_collapsed": true
    },
    "source": [
     "### Coeficiente de Spearman"
@@ -3125,7 +2914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -3284,18 +3073,15 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
     "### Coeficiente de Pearson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
-    "hidden": true,
     "scrolled": true
    },
    "outputs": [
