--- a/main.ipynb
+++ b/main.ipynb
@@ -29,7 +29,285 @@
    ],
    "source": [
     "import import_ipynb\n",
-    "from datasetHandler import Dataset"
+    "from datasetHandler import Dataset\n",
+    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "from IPython.display import Math\n",
+    "\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "## Dataset Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Happiness Rank</th>\n",
+       "      <th>Happiness Score</th>\n",
+       "      <th>Standard Error</th>\n",
+       "      <th>Economy (GDP per Capita)</th>\n",
+       "      <th>Family</th>\n",
+       "      <th>Health (Life Expectancy)</th>\n",
+       "      <th>Freedom</th>\n",
+       "      <th>Trust (Government Corruption)</th>\n",
+       "      <th>Generosity</th>\n",
+       "      <th>Dystopia Residual</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Switzerland</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.587</td>\n",
+       "      <td>0.03411</td>\n",
+       "      <td>1.39651</td>\n",
+       "      <td>1.34951</td>\n",
+       "      <td>0.94143</td>\n",
+       "      <td>0.66557</td>\n",
+       "      <td>0.41978</td>\n",
+       "      <td>0.29678</td>\n",
+       "      <td>2.51738</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7.561</td>\n",
+       "      <td>0.04884</td>\n",
+       "      <td>1.30232</td>\n",
+       "      <td>1.40223</td>\n",
+       "      <td>0.94784</td>\n",
+       "      <td>0.62877</td>\n",
+       "      <td>0.14145</td>\n",
+       "      <td>0.43630</td>\n",
+       "      <td>2.70201</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Denmark</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7.527</td>\n",
+       "      <td>0.03328</td>\n",
+       "      <td>1.32548</td>\n",
+       "      <td>1.36058</td>\n",
+       "      <td>0.87464</td>\n",
+       "      <td>0.64938</td>\n",
+       "      <td>0.48357</td>\n",
+       "      <td>0.34139</td>\n",
+       "      <td>2.49204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Norway</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>4</td>\n",
+       "      <td>7.522</td>\n",
+       "      <td>0.03880</td>\n",
+       "      <td>1.45900</td>\n",
+       "      <td>1.33095</td>\n",
+       "      <td>0.88521</td>\n",
+       "      <td>0.66973</td>\n",
+       "      <td>0.36503</td>\n",
+       "      <td>0.34699</td>\n",
+       "      <td>2.46531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>North America</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7.427</td>\n",
+       "      <td>0.03553</td>\n",
+       "      <td>1.32629</td>\n",
+       "      <td>1.32261</td>\n",
+       "      <td>0.90563</td>\n",
+       "      <td>0.63297</td>\n",
+       "      <td>0.32957</td>\n",
+       "      <td>0.45811</td>\n",
+       "      <td>2.45176</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Finland</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7.406</td>\n",
+       "      <td>0.03140</td>\n",
+       "      <td>1.29025</td>\n",
+       "      <td>1.31826</td>\n",
+       "      <td>0.88911</td>\n",
+       "      <td>0.64169</td>\n",
+       "      <td>0.41372</td>\n",
+       "      <td>0.23351</td>\n",
+       "      <td>2.61955</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Netherlands</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7.378</td>\n",
+       "      <td>0.02799</td>\n",
+       "      <td>1.32944</td>\n",
+       "      <td>1.28017</td>\n",
+       "      <td>0.89284</td>\n",
+       "      <td>0.61576</td>\n",
+       "      <td>0.31814</td>\n",
+       "      <td>0.47610</td>\n",
+       "      <td>2.46570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sweden</td>\n",
+       "      <td>Western Europe</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7.364</td>\n",
+       "      <td>0.03157</td>\n",
+       "      <td>1.33171</td>\n",
+       "      <td>1.28907</td>\n",
+       "      <td>0.91087</td>\n",
+       "      <td>0.65980</td>\n",
+       "      <td>0.43844</td>\n",
+       "      <td>0.36262</td>\n",
+       "      <td>2.37119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>New Zealand</td>\n",
+       "      <td>Australia and New Zealand</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7.286</td>\n",
+       "      <td>0.03371</td>\n",
+       "      <td>1.25018</td>\n",
+       "      <td>1.31967</td>\n",
+       "      <td>0.90837</td>\n",
+       "      <td>0.63938</td>\n",
+       "      <td>0.42922</td>\n",
+       "      <td>0.47501</td>\n",
+       "      <td>2.26425</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Australia</td>\n",
+       "      <td>Australia and New Zealand</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7.284</td>\n",
+       "      <td>0.04083</td>\n",
+       "      <td>1.33358</td>\n",
+       "      <td>1.30923</td>\n",
+       "      <td>0.93156</td>\n",
+       "      <td>0.65124</td>\n",
+       "      <td>0.35637</td>\n",
+       "      <td>0.43562</td>\n",
+       "      <td>2.26646</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Country                     Region  Happiness Rank  Happiness Score  \\\n",
+       "0  Switzerland             Western Europe               1            7.587   \n",
+       "1      Iceland             Western Europe               2            7.561   \n",
+       "2      Denmark             Western Europe               3            7.527   \n",
+       "3       Norway             Western Europe               4            7.522   \n",
+       "4       Canada              North America               5            7.427   \n",
+       "5      Finland             Western Europe               6            7.406   \n",
+       "6  Netherlands             Western Europe               7            7.378   \n",
+       "7       Sweden             Western Europe               8            7.364   \n",
+       "8  New Zealand  Australia and New Zealand               9            7.286   \n",
+       "9    Australia  Australia and New Zealand              10            7.284   \n",
+       "\n",
+       "   Standard Error  Economy (GDP per Capita)   Family  \\\n",
+       "0         0.03411                   1.39651  1.34951   \n",
+       "1         0.04884                   1.30232  1.40223   \n",
+       "2         0.03328                   1.32548  1.36058   \n",
+       "3         0.03880                   1.45900  1.33095   \n",
+       "4         0.03553                   1.32629  1.32261   \n",
+       "5         0.03140                   1.29025  1.31826   \n",
+       "6         0.02799                   1.32944  1.28017   \n",
+       "7         0.03157                   1.33171  1.28907   \n",
+       "8         0.03371                   1.25018  1.31967   \n",
+       "9         0.04083                   1.33358  1.30923   \n",
+       "\n",
+       "   Health (Life Expectancy)  Freedom  Trust (Government Corruption)  \\\n",
+       "0                   0.94143  0.66557                        0.41978   \n",
+       "1                   0.94784  0.62877                        0.14145   \n",
+       "2                   0.87464  0.64938                        0.48357   \n",
+       "3                   0.88521  0.66973                        0.36503   \n",
+       "4                   0.90563  0.63297                        0.32957   \n",
+       "5                   0.88911  0.64169                        0.41372   \n",
+       "6                   0.89284  0.61576                        0.31814   \n",
+       "7                   0.91087  0.65980                        0.43844   \n",
+       "8                   0.90837  0.63938                        0.42922   \n",
+       "9                   0.93156  0.65124                        0.35637   \n",
+       "\n",
+       "   Generosity  Dystopia Residual  \n",
+       "0     0.29678            2.51738  \n",
+       "1     0.43630            2.70201  \n",
+       "2     0.34139            2.49204  \n",
+       "3     0.34699            2.46531  \n",
+       "4     0.45811            2.45176  \n",
+       "5     0.23351            2.61955  \n",
+       "6     0.47610            2.46570  \n",
+       "7     0.36262            2.37119  \n",
+       "8     0.47501            2.26425  \n",
+       "9     0.43562            2.26646  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('datasets/whr_2015.csv')\n",
+    "data.head(10)"
    ]
   },
   {
@@ -43,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -274,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -309,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "hidden": true
    },
@@ -368,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -410,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -570,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -729,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -960,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -995,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1039,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1199,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1358,7 +1636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -1589,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -1624,7 +1902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1668,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1828,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -1987,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -2206,7 +2484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -2241,7 +2519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -2285,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2454,7 +2732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2613,15 +2891,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## World Happiness Report from 2019"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -2829,7 +3110,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Relação das variáveis"
@@ -2837,7 +3119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {
     "hidden": true,
     "scrolled": false
@@ -2863,7 +3145,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Regressão linear"
@@ -2871,7 +3154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -2906,7 +3189,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "heading_collapsed": true
+    "heading_collapsed": true,
+    "hidden": true
    },
    "source": [
     "### Coeficiente de Spearman"
@@ -2914,7 +3198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {
     "hidden": true,
     "scrolled": true
@@ -3073,15 +3357,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Coeficiente de Pearson"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
